# gwrs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
src/: array.rs  lib.rs
src/detector/: channel.rs
src/segments/: core.rs
src/timeseries/: core.rs
src/types/: array.rs  series.rs
